<resources>
    <string name="app_name">ChrisAsarhasa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rememberMe">Remember Me\n</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="firstName">First Name</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="email_address">Email Address</string>
    <string name="fullName">Full Name</string>
</resources>