<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment" >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@android:mipmap/sym_def_app_icon"
            app:civ_border_color="#292727"
            app:civ_border_width="5dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignRight="@id/profile_image"
            android:layout_alignBottom="@id/profile_image"
            android:src="@drawable/baseline_edit_24"
            app:civ_border_color="#EFECEC"
            app:civ_border_width="5dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/fullNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/fullName"
        android:textColor="#F6F0F0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fullNameTv"
        app:layout_constraintTop_toBottomOf="@+id/fullNameTv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/firstName"
            android:textColor="#F4EFEF"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/emailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        android:textColor="#F4F1F1"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutFullName"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFullName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutFullName"
        app:layout_constraintStart_toStartOf="@+id/emailTv"
        app:layout_constraintTop_toBottomOf="@+id/emailTv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/email_address"
            android:textColor="#ECE2E2" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/logout"
        android:textColor="#ECE2E2"
        app:backgroundTint="#3E55E8"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutEmail"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
        app:strokeColor="#151313"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>